# src/controllers/comment.js
@@ -5,6 +5,20 @@ const Blog = require("../models/blog")
 
 module.exports = {
     list: async (req, res) => {
+        /*
+            #swagger.tags = ["Comments"]
+            #swagger.summary = "List Comments"
+            #swagger.description = `
+                You can use <u>filter[] & search[] & sort[] & page & limit</u> queries with endpoint.
+                <ul> Examples:
+                    <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=asc&sort[field2]=desc</b></li>
+                    <li>URL/?<b>limit=10&page=1</b></li>
+                </ul>
+            `
+        */
+
         const data = await res.getModelList(Comment, {}, [{ path: "userId", select: "username image createdAt updatedAt" }])
 
         res.status(200).send({
@@ -15,6 +29,19 @@ module.exports = {
     },
 
     create: async (req, res) => {
+        /*
+            #swagger.tags = ["Comments"]
+            #swagger.summary = "Create Comment"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    "userId": "jdkv52acav633sdv9s332v6s6",
+                    "blogId": "jdkv52acav633sdv9s332v789",
+                    "comment": "Test Comment"
+                }
+            }
+        */
         const data = await Comment.create(req.body)
 
         const blog = await Blog.findOne({ _id: data.blogId })
@@ -28,6 +55,10 @@ module.exports = {
     },
 
     read: async (req, res) => {
+        /*
+            #swagger.tags = ["Comments"]
+            #swagger.summary = "Get Single Comment"
+        */
         const data = await Comment.findOne({ _id: req.params.id }).populate([{ path: "userId", select: "username image createdAt updatedAt" }])
 
         res.status(200).send({
@@ -37,6 +68,19 @@ module.exports = {
     },
 
     update: async (req, res) => {
+        /*
+            #swagger.tags = ["Comments"]
+            #swagger.summary = "Update Comment"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    "userId": "jdkv52acav633sdv9s332v6s6",
+                    "blogId": "jdkv52acav633sdv9s332v789",
+                    "comment": "Test Comment"
+                }
+            }
+        */
         const customFilter = req.user?.isAdmin ? { _id: req.params.id } : { _id: req.user._id }
 
         const data = await Comment.updateOne(customFilter, req.body, { runValidators: true })
@@ -49,6 +93,10 @@ module.exports = {
     },
 
     delete: async (req, res) => {
+        /*
+            #swagger.tags = ["Comments"]
+            #swagger.summary = "Delete Comment"
+        */
         const customFilter = req.user?.isAdmin ? { _id: req.params.id } : { _id: req.user._id }
 
         const data = await Comment.deleteOne(customFilter)
