# src/controllers/user.js
@@ -5,7 +5,21 @@ const Token = require("../models/token")
 const passwordEncrypt = require("../helpers/passwordEncrypt")
 
 module.exports = {
+    
     list: async (req, res) => {
+        /*
+            #swagger.tags = ["Users"]
+            #swagger.summary = "List Users"
+            #swagger.description = `
+                You can send query with endpoint for filter[], search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
         const data = await res.getModelList(User)
 
         res.status(200).send({
@@ -16,6 +30,23 @@ module.exports = {
     },
 
     create: async (req, res) => {
+        /*
+            #swagger.tags = ["Users"]
+            #swagger.summary = "Create User"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    "username": "test",
+                    "password": "1234",
+                    "email": "test@site.com",
+                    "firstName": "test",
+                    "lastName": "test",
+                    "image": "https://wwww......",
+                    "bio": "test"
+                }
+            }
+        */
         req.body.isAdmin = false
         const data = await User.create(req.body)
 
@@ -32,6 +63,10 @@ module.exports = {
     },
 
     read: async (req, res) => {
+        /*
+            #swagger.tags = ["Users"]
+            #swagger.summary = "Get Single User"
+        */
         const customFilter = req.user?.isAdmin ? { _id: req.params.id } : { _id: req.user._id }
 
         const data = await User.findOne(customFilter)
@@ -43,6 +78,23 @@ module.exports = {
     },
 
     update: async (req, res) => {
+        /*
+            #swagger.tags = ["Users"]
+            #swagger.summary = "Update User"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    "username": "test",
+                    "password": "1234",
+                    "email": "test@site.com",
+                    "firstName": "test",
+                    "lastName": "test",
+                    "image": "https://wwww......",
+                    "bio": "test"
+                }
+            }
+        */
         const customFilter = req.user?.isAdmin ? { _id: req.params.id } : { _id: req.user._id }
 
         if(!req.user?.isAdmin) {
@@ -60,6 +112,10 @@ module.exports = {
     },
 
     delete: async (req, res) => {
+        /*
+            #swagger.tags = ["Users"]
+            #swagger.summary = "Delete User"
+        */
         const data = await User.deleteOne({ _id: req.params.id })
 
         res.status(data.deletedCount ? 204 : 404).send({
